build: add missing --enable-native-access flag to convention